--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,12 +1,27 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+
+## 开发环境 #########################################################################################################################
+#spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.initialSize=20
+#spring.datasource.minIdle=10
+#spring.datasource.maxActive=100
+####################################################################################################################################
+## 生产环境 #########################################################################################################################
+# 修改这里的数据库地址：如果是本机安装的这里改成127.0.0.1，改成对应的数据库地址即可，注意创建的数据库是tale：
+spring.datasource.url=jdbc:mysql://rm-2zejekndp294kd19f.mysql.rds.aliyuncs.com/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+# 修改数据库用户名
 spring.datasource.username=root
-spring.datasource.password=root
+# 修改数据库密码
+spring.datasource.password=root_Xjxt
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
+####################################################################################################################################
+
 
 
 # thymeleaf
